Updated main page to show the custom "abstract" field. Added some code formatting CSS.

--- a/css/style.less
+++ b/css/style.less
@@ -96,8 +96,21 @@ article {
   }
 }
 
+.update-time {
+  font-size: 12px;
+  font-family: 'Droid Sans Mono';
+  font-weight: normal;
+}
+
+pre.command {
+  .gist .gist-file; 
+  margin: 10px;
+}
+
+
 .gist .gist-file {
   border: 0px;
+  color: @lightyellow * .7 !important;
   box-shadow: #000 -2px 2px 2px 2px;
   background-color: #191919 !important;
   width: 800px;
